<resources>
    <string name="app_name">MalezApp</string>
    <string name="PoliticasContenido">Arnaldo Cantero built the MalezApp app as a Free app. This SERVICE is provided by Arnaldo Cantero at no cost and is intended for use as is.\n\n
        This page is used to inform visitors regarding my policies with the collection, use, and disclosure of Personal Information if anyone decided to use my Service.\n\n
        If you choose to use my Service, then you agree to the collection and use of information in relation to this policy. The Personal Information that I collect is used for providing and improving the Service. I will not use or share your information with anyone except as described in this Privacy Policy.\n
        The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which is accessible at ExoApp unless otherwise defined in this Privacy Policy.\n\n
        Information Collection and Use\n
        For a better experience, while using our Service, I may require you to provide us with certain personally identifiable information, including but not limited to Android advertising ID. The information that I request will be retained on your device and is not collected by me in any way.\n\n
        The app does use third party services that may collect information used to identify you.\n\n
        Link to privacy policy of third party service providers used by the app\n
        - Google Play Services\n
        - AdMob\n\n
        Log Data\n\n
        I want to inform you that whenever you use my Service, in a case of an error in the app I collect data and information (through third party products) on your phone called Log Data. This Log Data may include information such as your device Internet Protocol (“IP”) address, device name, operating system version, the configuration of the app when utilizing my Service, the time and date of your use of the Service, and other statistics.\n\n
        Cookies\n\n
        Cookies are files with a small amount of data that are commonly used as anonymous unique identifiers. These are sent to your browser from the websites that you visit and are stored on your devices internal memory.\n\n
        This Service does not use these “cookies” explicitly. However, the app may use third party code and libraries that use “cookies” to collect information and improve their services. You have the option to either accept or refuse these cookies and know when a cookie is being sent to your device. If you choose to refuse our cookies, you may not be able to use some portions of this Service.\n\n
        Service Providers\n\n
        I may employ third-party companies and individuals due to the following reasons:\n\n
        To facilitate our Service;\n
        To provide the Service on our behalf;\n
        To perform Service-related services; or\n
        To assist us in analyzing how our Service is used.\n
        I want to inform users of this Service that these third parties have access to your Personal Information. The reason is to perform the tasks assigned to them on our behalf. However, they are obligated not to disclose or use the information for any other purpose.\n\n
        Security\n\n
        I value your trust in providing us your Personal Information, thus we are striving to use commercially acceptable means of protecting it. But remember that no method of transmission over the internet, or method of electronic storage is 100% secure and reliable, and I cannot guarantee its absolute security.\n\n
        Links to Other Sites\n\n
        This Service may contain links to other sites. If you click on a third-party link, you will be directed to that site. Note that these external sites are not operated by me. Therefore, I strongly advise you to review the Privacy Policy of these websites. I have no control over and assume no responsibility for the content, privacy policies, or practices of any third-party sites or services.\n\n
        Children’s Privacy\n\n
        These Services do not address anyone under the age of 13. I do not knowingly collect personally identifiable information from children under 13. In the case I discover that a child under 13 has provided me with personal information, I immediately delete this from our servers. If you are a parent or guardian and you are aware that your child has provided us with personal information, please contact me so that I will be able to do necessary actions.\n\n
        Changes to This Privacy Policy\n\n
        I may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically for any changes. I will notify you of any changes by posting the new Privacy Policy on this page. These changes are effective immediately after they are posted on this page.\n\n
        Contact Us\n\n
        If you have any questions or suggestions about my Privacy Policy, do not hesitate to contact me.\n\n
        This privacy policy page was created at privacy policy template.net and modified/generated by App Privacy Policy Generator\n</string>
    <string name="tvInfoMaterial">Información e imagenes extraidos del material:\n
        <b>\"Manual de identificacion de malezas comunes del Paraguay\"</b>\n\n

        Material elaborado por:\n
        Juana De Egea Elsam, Fátima Mereles, y Gloria Céspedes\n\n

        Cita del material\n
        DE EGEA ELSAM, J., MERELES, F &amp; CÉSPEDES, G. 2018. Malezas comunes del Paraguay; Manual de identificación. (Info edición) 1-338.\n\n

        Link de acceso al material:\n
        https://www.inbio.org.py/informes/publicaciones/Manual_Malezas-comunes-del-Paraguay.pdf\n\n\n\n

        Aplicación móvil desarrollado por:\n
        Lic. Arnaldo Cantero\n\n

        Correo electrónico:\n
        arnaldorcm@hotmail.com</string>
    <string name="buscar">Buscar</string>
    <string name="menu_info">Informacion</string>
    <string name="resultado">Especie: especie</string>
    <string name="Descripcion_iv_imagen">Foto de la maleza</string>
    <string name="btn_principal1">Todas las malezas</string>
    <string name="btn_principal2">Búsqueda específica</string>
    <string name="tv_identificador">Identificador</string>
    <string name="tv_nombrecomun">Nombre común</string>
    <string name="tv_sinonimo">Sinónimos</string>
    <string name="tv_nombre_cientifico">Nombre cientifico</string>
    <string name="tv_familia">Familia</string>
    <string name="tv_reconocidopor">Reconocido por</string>
    <string name="titulolista">Listado de malezas</string>
    <string name="titulolista2">Buscar maleza por</string>
    <string name="titulolista3">Buscar herbicida por</string>
    <string name="titulobusqueda">Búsqueda de malezas</string>
    <string name="titulomaleza">Titulo de la maleza</string>
    <string name="foto_de_la_especie">Foto de la especie</string>
    <string name="tv_version">Version de la app: 0, Version de la BD: 0</string>
    <string name="tv_desarrolladopor">Desarrollado por: Lic. Arnaldo Cantero</string>
    <string name="tv_versionsplash">Versión de la app: X,  Version de la BD: X</string>
    <string name="logo_de_la_app">Logo de la app</string>
    <string name="tvCodigo">Codigo</string>
    <string name="tvDescripcion">Descripción</string>
    <string name="tvCiclo">Ciclo</string>
    <string name="tvEcologia">Ecología</string>
    <string name="tvDistribucion">Distribución</string>
    <string name="tvEspeciesSimi">Especies similares</string>
    <string name="tvTipoHoja">Tipo de hoja</string>
    <string name="tvCultivo">Cultivo</string>
    <string name="tvResistencia">Resistencia</string>
    <string name="tvControl">Control Químico</string>
    <string name="tvTituloBuscar1">Ingrese el nombre común</string>
    <string name="etBuscar1">Ej: Pasto estrella</string>
    <string name="tvTituloBuscar2">Ingrese el nombre científico</string>
    <string name="tvTituloBuscar3">Seleccione la Familia</string>
    <string name="tvTituloBuscar4">Seleccione el ciclo</string>
    <string name="tvTituloBuscar5">Seleccione el tipo de especie</string>
    <string name="tvTituloBuscar6">DEPARTAMENTO</string>
    <string name="tvTituloBuscar7">FAMILIA ******</string>
    <string name="etBuscar2">Ej: Cynodon plectostachyus</string>
    <string name="fg_1">Fragmento Home</string>
    <string name="fg_2">Fragmento Buscar maleza</string>
    <string name="buscarNombreComun">Nombre común</string>
    <string name="tvBusquedaGuiada">Búsqueda Guiada</string>
    <string name="tvBusquedaAbierta">Búsqueda Abierta</string>
    <string name="tvlistadoDeMalezas">Listado de malezas</string>
    <string name="buscarTodosHerbicidas">Todos los herbicidas</string>
    <string name="resistenciaHerbicida">Herbicidas resistentes</string>
    <string name="buscarNombreCien">Nombre científico</string>
    <string name="buscarFamilia">Familia</string>
    <string name="buscarTipoEspecie">Tipo de especie</string>
    <string name="buscarDistribución">Distribución</string>
    <string name="buscarCiclo">Ciclo de la planta</string>
    <string name="tituloMenu1">Herbicidas</string>
    <string name="tituloMenu2">Buscar maleza</string>
    <string name="tituloMenu3">Info</string>
    <string name="SeleccioneFamilia">Seleccione la familia</string>
    <string name="TituloTipoHoja">Seleccione el tipo de hoja</string>
    <string name="Politicas">Politicas de privacidad</string>
    <string name="NombreApp">MalezApp</string>
    <string name="Subtitulo">Malezas comunes del Paraguay</string>
    <string name="Mapa">Mapa del Paraguay</string>
    <string name="tvTituloImagen">Titulo de la imagen</string>
    <string name="tvTituloBusquedaGuiada">Titulo</string>
    <string name="tvSubtituloBusquedaGuiada">Subtitulo</string>
    <string name="btnAnterior">Anterior</string>
    <string name="malezasPosible">Ver N Malezas posibles</string>
    <string name="btnSiguiente">Siguiente</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
