<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".principal.FragmentPrincipalBusquedaMaleza">

    <TextView
        android:id="@+id/tvTituloLista4"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="top"
        android:background="@color/colorSecondary"
        android:gravity="center"
        android:text="@string/titulolista2"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="40dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:gravity="center">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="170dp"
                android:layout_gravity="center"
                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="10dp">

                <ImageView
                    android:id="@+id/ivBusquedaGuiada"
                    android:layout_width="115dp"
                    android:layout_height="115dp"
                    android:contentDescription="@string/buscarFamilia"
                    android:src="@mipmap/ic_btn_busquedaguiada"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/tvBusquedaGuiada"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ivBusquedaGuiada" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="170dp"
                android:layout_gravity="center"
                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="10dp">

                <ImageView
                    android:id="@+id/ivBusquedaAbierta"
                    android:layout_width="115dp"
                    android:layout_height="115dp"
                    android:contentDescription="@string/buscarDistribución"
                    android:src="@mipmap/ic_btn_busquedaabierta"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/tvBusquedaAbierta"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ivBusquedaAbierta" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="170dp"
                android:layout_gravity="center"
                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="10dp">

                <ImageView
                    android:id="@+id/ivListadoMalezas"
                    android:layout_width="115dp"
                    android:layout_height="115dp"
                    android:contentDescription="@string/Descripcion_iv_imagen"
                    android:src="@mipmap/ic_btn_malezas"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/tvlistadoDeMalezas"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ivListadoMalezas" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </TableRow>

    </TableLayout>

</FrameLayout>